fix(styles): adjust the style for the visited state in the high-contrast-mode

--- a/packages/styles/src/elements/link.scss
+++ b/packages/styles/src/elements/link.scss
@@ -22,11 +22,14 @@ a {
   );
 
   @include utilities.high-contrast-mode() {
-    color: CanvasText !important;
-
-    &:hover,
-    &:focus {
+    &,
+    &:focus,
+    &:hover {
       color: LinkText !important;
     }
+  }
+
+  &:visited {
+    color: VisitedText;
   }
 }
